--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "jeet": "mojotech/jeet#~5.1.3",
-    "bootstrap-sass-official": "~3.1.1+2",
+    "bootstrap-sass-official": "~3.1.1",
     "bootstrap": "~3.1.1"
   }
 }
